@@ -1,3 +1,7 @@
+2008-02-16  Robert Ancell  <robert.ancell@gmail.com>
+
+        * src/lib/chess/board.py: Fix castling regression (Bug #516459)
+
 2008-02-11  Robert Ancell  <robert.ancell@gmail.com>
 
         * src/lib/gtkui/network.py: Handle unexpected throbber images (Bug #511693)
